# smart-oh

./: .prettierrc  README.md  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.scripts.json  vitest.config.mts
.github/workflows/: deploy-ec2-preview.yml  deploy-ec2-production.yml  deploy_ec2.yml  enforce-pr-target.yml  test.yml
.storybook/: main.ts  preview.ts
migrations/: 0000_true_valkyrie.sql  0001_chemical_black_panther.sql  0001_famous_cerise.sql  0002_chief_shotgun.sql  0006_ordinary_tusk.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
smart-oh/: package.json  pnpm-lock.yaml
smart-oh-ws/: README.md  pyproject.toml
smart-oh-ws/src/: main.py
smart-oh-ws/src/auth/: auth.py
smart-oh-ws/src/db/: db.py
smart-oh-ws/src/websocket/: dummy_data.py  state.py  websocket_manager.py
src/: data.ts  middleware.ts
src/__test__/: db.test.ts  setup.ts
src/app/: layout.tsx  page.tsx
src/cache/: index.ts
src/components/: app-header.tsx  app-sidebar.tsx  availability-checker-event-add-form.tsx  availability-checker.tsx  avatar.tsx  calendar.tsx  class-switcher.tsx  date-picker.tsx  event-delete-form.tsx  event-edit-form.tsx  footer.tsx  icons.tsx  login-form.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx
src/context/: class-context.tsx
src/db/: classes.ts  index.ts  schema.ts  users.ts
src/hooks/: use-toast.ts  useAnimationTrigger.tsx  useDragUser.ts  useYearChange.tsx
src/lib/: auth.ts  seed.ts  (+3 more)
(+118 files in other folders)
