[project]
name = "smart-oh-ws-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pre-commit>=4.1.0",
    "psycopg[binary,pool]>=3.2.5",
    "ruff>=0.9.4",
]

[tool.ruff]
select = ["E", "F", "I"]
